# Rag-Injection

./: .gitignore  AGENTS.md  README.md  app.py  archibase.txt  attack.py  attacker.py  attacks.py  bentasker.txt  defense.py  defenses.py  detector.py  docs.py  evaluate.py  faladobairro.txt  generated_attack_docs.json  kassoon.txt  kleintechnik.txt  lawsofux.txt  lcpdfr.txt  luminousmen.txt  main.py  prepare_data.py  pyproject.toml  quick_evaluation.py  rag.py  requirements.txt  run_attacks.py  train_LLM_defense.py
LLM_defense/: dataset.py  model.py  train.py
RAG/: embeddings.py  generator.py  ingestion.py  pipeline.py  retriever.py  vector_store.py
config/: settings.py
data/attacks/: exfiltration.yaml  goal_hijacking.yaml  phishing.yaml  privilege_escalation.yaml
data/seed/: confluence_pages.json  emails.json  internal_docs.json  slack_messages.json
evaluation/: reporter.py  runner.py
notebooks/: 01_data_exploration.ipynb  02_attack_demo.ipynb  03_defense_demo.ipynb  04_evaluation.ipynb
scripts/: evaluate.py  generate_data.py  ingest.py  run_attacks.py  simulate_evaluation.py  train_detector.py
src/attacks/: __init__.py  base.py  core.py  exfiltration.py  goal_hijacking.py  phishing.py  privilege_escalation.py
src/data_gen/: __init__.py  base.py  confluence.py  core.py  email.py  injector.py  internal_docs.py  slack.py
src/defenses/: __init__.py  base.py  chunk_scanner.py  core.py  privilege_filter.py  safety_reranker.py  (+1 more)
tests/: conftest.py  test_attacks.py  test_data_gen.py  test_defenses.py  test_evaluation.py  test_rag_pipeline.py
(+15 files in other folders)
